[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucidml"
version = "0.2.0"
description = "Transparent, from-scratch machine-learning building blocks in NumPy."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Salim Tlemcani" }]
keywords = ["machine-learning", "decision-tree", "from-scratch", "numpy", "education"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
dev = ["pytest>=7", "scikit-learn>=1.0", "matplotlib>=3.5", "jupyter", "nbconvert"]

[project.urls]
Homepage = "https://github.com/salimtlemcani/lucidml"

[tool.setuptools.packages.find]
where = ["."]
include = ["lucidml*"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "lucidml"]
